# template-axum-sqlx-api

./: .env.example  .gitignore  Cargo.toml  README.md
assets/: compose.yml  status.html
migrations/: 20250614162827_dummy.sql
src/: config.rs  db.rs  lib.rs  main.rs
src/fixtures/: common.rs  dummy.rs  mod.rs
src/handlers/: common.rs  help.rs  mod.rs  status.rs
src/middleware/: logging.rs
src/models/: common.rs  help.rs  mod.rs  status.rs
src/routes/: help.rs  mod.rs
tests/: config_test.rs
