[package]
name = "template-axum-sqlx-api"
version = "0.2.0"
edition = "2024"
authors = ["Osef <osefcode@gmail.com>"]
description = "A template for building REST APIs with Axum and SQLx"
license = "MIT"
repository = "http://localhost:3000/osef/template-axum-sqlx-api.git"
readme = "README.md"
keywords = ["api", "axum", "sqlx", "postgres", "rest"]
categories = ["web-programming::http-server", "database"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "bigdecimal"] }

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rust_decimal = { version = "1.32", features = ["serde"] }
bigdecimal = { version = "0.4.0", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Security
argon2 = "0.5"

# Configuration
config = "0.14"
toml = "0.8"

# OpenAPI / Swagger
# utoipa = { version = "5.3.1", features = ["axum_extras", "chrono"] }
# utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

# Additional dependencies
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
